# mini_projects_lang

./: .gitignore  README.md
HyprKeys/: Cargo.toml  README.md
HyprKeys/src/: main.rs  theme.rs
circuitx/: CMakeLists.txt  README.md
circuitx/include/: components.hpp  netlist.hpp  plotter.hpp  simulator.hpp
circuitx/src/: components.cpp  main.cpp  main.cpp.back  netlist.cpp  plotter.cpp  simulator.cpp
circuitx/test/: netlist.json
gesture_controller/: .gitignore  README.md  format_labels.py  train_gesture_classification.sh  train_hand_detection.sh
gesture_controller/app/: CMakeLists.txt  main.cpp  probe_serial.cpp
gesture_controller/app/ble_gesture_stm32/: Cargo.toml
gesture_controller/app/ble_gesture_stm32/src/: main.rs
gesture_controller/app/include/: yolo_models.hpp
gesture_controller/app/src/: CMakeLists.txt  yolo_models.cpp
hiragana/: README.md  gui.py  hiragana_cnn.pt  hiragana_cnn.py  main.py
rustygame/: .gitignore  Cargo.toml  README.md
rustygame/src/: game.rs  lib.rs  main.rs
rustygame/src/animations/: Cargo.toml  animations.rs
rustygame/src/commands/: Cargo.toml  mod.rs
rustygame/src/ecs/: components.rs  mod.rs  systems.rs  world.rs
rustygame/src/entities/: entity.rs  identifier.rs  mod.rs  player.rs  root.rs  slimesimple.rs
rustygame/src/resources/: textures.rs
rustygame/src/scenegrap/: Cargo.toml  background.rs  layers.rs  mod.rs  scenenode.rs
serialprotocols/: README.md
serialprotocols/spi/: files.txt
serialprotocols/spi/src/: spi_controller.sv  spi_peripheral.sv  spi_rx.sv  spi_top.sv  spi_tx.sv
serialprotocols/spi/tb/: spi_rx_tb.sv  spi_top_tb.sv  spi_tx_tb.sv
serialprotocols/uart/: files.txt
serialprotocols/uart/src/: baud_gen.sv  uart_rx.sv  (+2 more)
sql_sensors/: README.md  config.py  db_pool.py  db_queries.py  db_schema.py  main.py  protocol.py  sensor.py  setup_db.py  tcp_client.py  tcp_server.py
stm32multidevice/: Cargo.toml  README.md
stm32multidevice/src/: main.rs
udpChat/: CMakeLists.txt  README.md  chat.cpp  chatClient.cpp  chatServer.cpp
wavescan/: Cargo.toml  README.md
wavescan/src/: analyzer.rs  app.rs  main.rs  ui.rs
(+6 files in other folders)
